Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16715

AutoTests plugin doesn't set working directory automatically

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • Qt Creator 4.0.2, Qt Creator 4.1.0-rc1
    • Test Integration
    • None
    • Linux, Qt 5.7.0
    • cbd4f802795eec65f66adc19106718bf12382740

    Description

      When build project with auto tests first time and run auto tests with AutoTests plugin then working directory to each test sets to $HOME. But if force QtCreator to initialize string of working directory of the test on Project->Run page, then working directory set normally. Just build attached project and run auto tests but don't look at Run page and look at debug output of test... Good luck.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-16715
        # Subject Branch Project Status CR V

        Activity

          People

            cstenger Christian Stenger
            igor.mironchik Igor Mironchik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes